[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/asteroid.png" type="Texture" id=1]
[ext_resource path="res://asteroid.gd" type="Script" id=2]

[node name="asteroid" type="Area2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -40, -48, -8, -32, 40, -48, 56, 8, 24, 48, 8, 8, -32, 32, -56, 8 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -4, -1.90735e-06 )
scale = Vector2( 6, 4.8 )

[connection signal="area_entered" from="." to="." method="_on_asteroid_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_asteroid_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
